--- a/AnnotationApp/app/src/main/res/layout/activity_main.xml
+++ b/AnnotationApp/app/src/main/res/layout/activity_main.xml
@@ -7,6 +7,7 @@
     tools:context="chen.pa.com.annotationapp.MainActivity">
 
     <TextView
+        android:id="@+id/tv_message"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Hello World!"
